# crane-gym

./: put_profitability.py  pyproject.toml
allocation_gym/: __init__.py  __main__.py  btc_correlation_report.py  btc_midcap_correlation.py  config.py  credentials.py  gold_btc_analysis.py  plotting.py  runner.py  weekend.py
allocation_gym/analyzers/: performance.py
allocation_gym/indicators/: __init__.py  etf_flow.py  iv_zscore.py  variance.py
allocation_gym/metrics/: __init__.py  variance_metrics.py
allocation_gym/options/: README.md  __init__.py  backtest_forward.py  black_scholes.py  drawdown_analysis.py  historical_pricing.py  iwm_vol_compare.py  metrics.py  plot_drawdown.py  report.py  simulation.py
allocation_gym/signals/: __main__.py  btc_dashboard.py
allocation_gym/simulation/: __init__.py  __main__.py  calibrate.py  config.py  data.py  engine.py  forward_test.py  plotting.py  runner.py
allocation_gym/sizers/: __init__.py  kelly.py
allocation_gym/strategies/: __init__.py  mean_reversion.py  momentum.py  variance_kelly.py
docs/7/: btc_correlation_all_assets.csv  btc_correlation_metadata.csv  btc_crwd_put_sizing.csv  btc_iwn_put_sizing.csv  btc_top10_long_thesis.csv  btc_top10_short_thesis.csv
