[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crane-gym"
version = "0.1.0"
description = "eBay GPU, storage & hardware scalping analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
crane-gym = "crane_gym.cli:main"
